--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GymMembershipPlanListViewModel
 @{
-    ViewBag.Title = "Member List";
+    ViewBag.Title = "Gym Membership Plan List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
 }
 <!-- Page Content-->
@@ -10,8 +10,8 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Member List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateMember" role="button"><i class="fas fa-plus me-2"></i>Add Member</a>
+                        <span class="card-title">Gym Membership Plan List</span>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateGymMembershipPlan" role="button"><i class="fas fa-plus me-2"></i>Add Membership Plan</a>
                         <p class="text-muted mb-0"></p>
                     </div>
                     <div class="card-body">
