--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
@@ -1,9 +1,8 @@
-﻿@model GymMemberDetailsListViewModel
+﻿@model GymMembershipPlanListViewModel
 @{
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    ModelPopUpViewModel addFollowUpModel = new ModelPopUpViewModel() { ModelPopUpId = "AddUpdateFollowUpModelPopupId", ModalContentId = "AddUpdateFollowUpModelPopupContentId" };
 }
 <div class="row">
     @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
@@ -14,23 +13,25 @@
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
-                @if (Model?.GymMemberDetailsList?.Count > 0)
+                @if (Model?.GymMembershipPlanList?.Count > 0)
                 {
-                    foreach (var item in Model?.GymMemberDetailsList)
+                    foreach (var item in Model?.GymMembershipPlanList)
                     {
                         <tr>
-                            <td style="text-align: center; width: 0px"><img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" /></td>
-                            <td>@item.FirstName</td>
-                            <td>@item.LastName</td>
-                            <td>@item.MobileNumber</td>
-                            <td>@item.EmailId</td>
-                            @* <td>
-                    @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
-                    </td> *@
+                            <td>@item.MembershipPlanName</td>
+                            <td>@item.PlanType</td>
+                            <td>@item.MaxCost</td>
+                            <td>@item.MinCost</td>
+                            <td>@item.PlanDurationInMonth</td>
+                            <td>@item.PlanDurationInDays</td>
+                            <td>@item.PlanDurationInSession</td>
+                            <td>@item.IsRenewable	</td>
+                            <td>
+                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
+                            </td>
                             <td class="text-center">
-                                <a href="../@controllerName/UpdateMemberPersonalDetails?gymMemberDetailId=@item.GymMemberDetailId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a data-bs-toggle="modal" data-bs-target="#@addFollowUpModel.ModelPopUpId" href="void javascritp(0)" onclick="GymMemberDetails.GetMemberFollowUp('@addFollowUpModel.ModalContentId','@item.GymMemberDetailId','0')" title="Add Follow-Up" class="btn btn-sm btn-soft-warning btn-circle"><i class="fas ti-user"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?gymMemberDetailIds=@item.GymMemberDetailId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/UpdateGymMembershipPlan?gymMembershipPlanId=@item.GymMembershipPlanId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?gymMembershipPlanId=@item.GymMembershipPlanId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
@@ -40,5 +41,4 @@
     </div>
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
-@Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", addFollowUpModel)
 
