--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
@@ -41,12 +41,11 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GeneralFinancialYearId, new { @class = "form-label" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownType = DropdownTypeEnum.FinancialYear.ToString(),
-                                   DropdownName = "GeneralFinancialYearId",
-                                   DropdownSelectedValue = Model.GeneralFinancialYearId.ToString()
-                               })
-                                        @* @Html.TextBoxFor(x => x.GeneralFinancialYearId, new { @class = "form-control"}) *@
+                                    {
+                                    DropdownType = DropdownTypeEnum.FinancialYear.ToString(),
+                                    DropdownName = "GeneralFinancialYearId",
+                                    DropdownSelectedValue = Model.GeneralFinancialYearId.ToString()
+                                    })
                                         @Html.ValidationMessageFor(x => x.GeneralFinancialYearId)
                                     </div>
                                 </div>
@@ -61,20 +60,32 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.KeyFieldEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                       {
-                                           DropdownSelectedValue = Model.KeyFieldEnumId.ToString(),
-                                           DropdownName = "KeyFieldEnumId",
-                                   GroupCode = DropdownTypeEnum.GeneralRunningNumberFor.ToString()
-                                       })   @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
+                                    {
+                                    DropdownSelectedValue = Model.KeyFieldEnumId.ToString(),
+                                    DropdownName = "KeyFieldEnumId",
+                                    GroupCode = DropdownTypeEnum.GeneralRunningNumberFor.ToString()
+                                    })   @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
                                     </div>
                                 </div>
-                               
-                                
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DisplayFormat, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.DisplayFormat, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.DisplayFormat)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.Prefix, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Prefix, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.Prefix)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.Separator, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Separator, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.Separator)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -94,29 +105,17 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsSequenceReset, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.IsSequenceReset, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.IsSequenceReset)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.Separator, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Separator, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Separator)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.Prefix, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Prefix, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.Prefix)
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsSequenceReset, new { @class = "form-check-input" })
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsBackDated, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.IsBackDated, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.IsBackDated)
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsBackDated, new { @class = "form-check-input" })
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
