--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/_List.cshtml
@@ -20,11 +20,11 @@
                         <tr>
                             <td>@item.Description</td>
                             <td>@item.DisplayFormat</td>
+                            <td>@item.Prefix</td>
+                            <td>@item.Separator</td>
                             <td>@item.StartSequence</td>
                             <td>@item.CurrentSequnce</td>
-                            <td>@item.IsSequenceReset</td>
-                            <td>@item.Separator</td>
-                            <td>@item.Prefix</td>
+                            <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsSequenceReset)</td>
                             <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalRunningNumberId=@item.GeneralRunningNumberId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
