--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -39,6 +39,20 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.MaxCost, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.MaxCost, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.MaxCost)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.MinCost, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.MinCost, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.MinCost)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanTypeEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
@@ -47,6 +61,55 @@
                                    GroupCode = DropdownTypeEnum.GymPlanType.ToString()
                                })
                                         @Html.ValidationMessageFor(x => x.PlanTypeEnumId, null, new { id = "errorPlanTypeEnumId" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PlanDurationInMonth, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.PlanDurationInMonth, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.PlanDurationInMonth)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PlanDurationInDays, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.PlanDurationInDays, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.PlanDurationInDays)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PlanDurationInSession, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.PlanDurationInSession, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.PlanDurationInSession)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsRenewable, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.IsRenewable, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.IsRenewable)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.IsTimebaseBiometricAccess)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.FromTime, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.FromTime, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.FromTime)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ToTime, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.ToTime, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.ToTime)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
