--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -45,9 +45,9 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.MiddleName, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.MiddleName)
+                                        @Html.LabelFor(x => x.LastName, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.LastName)
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
@@ -81,7 +81,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LeadGenerationSource, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.LeadGenerationSource, new { @class = "form-control", type = "number" })
+                                        @Html.TextBoxFor(x => x.LeadGenerationSource, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.LeadGenerationSource)
                                     </div>
                                 </div>
