--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -4,6 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
+
 <!-- Page Content-->
 <div class="page-content mt-5">
     <div class="container-fluid">
@@ -31,9 +32,9 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.PersonTitle, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.PersonTitle)
+                                        @Html.LabelFor(x => x.Title, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.Title)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -45,15 +46,15 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.LastName, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.LastName)
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control", @readonly = "true" })
+                                        @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control", @id = "DateOfBirth" })
                                         @Html.ValidationMessageFor(x => x.DateOfBirth, null, new { id = "errorDateOfBirth" })
                                     </div>
                                 </div>
@@ -66,13 +67,6 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PhoneNumber, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control", type = "tel" })
-                                        @Html.ValidationMessageFor(x => x.PhoneNumber)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", type = "tel" })
                                         @Html.ValidationMessageFor(x => x.MobileNumber)
@@ -81,7 +75,10 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LeadGenerationSource, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.LeadGenerationSource, new { @class = "form-control" })
+                                        <select class="form-control" id="LeadGenerationSource" name="LeadGenerationSource">
+                                            <option value="">--Select--</option>
+                                            <!-- List is empty by default -->
+                                        </select>
                                         @Html.ValidationMessageFor(x => x.LeadGenerationSource)
                                     </div>
                                 </div>
@@ -160,7 +157,7 @@
             },
                 function (start, end, label) { });
 
-            
+        });
     </script>
 }
 
