Code Checking for EmployeeMaster List .

--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
@@ -21,6 +21,7 @@
                             <td style="text-align: center; width: 0px"><img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" /></td>
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
+                            <td>@item.Gender</td>
                             <td>@item.MobileNumber</td>
                             <td>@item.EmailId</td>
                             @* <td>
