Lead Generation Gender Field Added

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/_List.cshtml
@@ -21,6 +21,7 @@
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
                             <td>@item.EmailId</td>
+                            <td>@item.GenderEnumId</td>
                             <td>@item.MobileNumber</td>
                             <td>@item.LeadGenerationSource</td>
                             <td>@item.LeadGenerationStatus</td>
