--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -67,6 +67,17 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.GenderEnumId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.GenderEnumId.ToString(),
+                                   DropdownName = "GenderEnumId",
+                                   GroupCode = DropdownTypeEnum.Gender.ToString()
+                               })   @Html.ValidationMessageFor(x => x.GenderEnumId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", type = "tel" })
                                         @Html.ValidationMessageFor(x => x.MobileNumber)
