--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/CreateEdit.cshtml
@@ -1,8 +1,9 @@
 ﻿@model OrganisationCentrewiseBuildingViewModel
 @{
-    ViewBag.Title = Model.OrganisationCentrewiseBuildingMasterId > 0 ? "Update Organisation Centre" : "Add Organisation Centre";
+    ViewBag.Title = Model.OrganisationCentrewiseBuildingMasterId > 0 ? "Update Organisation Centrewise Building" : "Add Organisation Centrewise Building";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "OrganisationCentreWiseBuildingMaster.GetOrganisationCentrewiseBuildingMasterByCentreCode()" };
 }
 <!-- Page Content-->
 <div class="page-content">
@@ -15,11 +16,11 @@
                         <div class="col">
                             @if (Model.OrganisationCentrewiseBuildingMasterId > 0)
                             {
-                                <h4 class="page-title">Update Organisation Centre</h4>
+                                <h4 class="page-title">Update Organisation Centrewise Building</h4>
                             }
                             else
                             {
-                                <h4 class="page-title">Create Organisation Centre</h4>
+                                <h4 class="page-title">Create Organisation Centrewise Building</h4>
                             }
                         </div><!--end col-->
                     </div><!--end row-->
@@ -45,7 +46,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control"})
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
                                 </div>
