--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuilding/List.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewBag.Title = "Organisation Centrewise Building List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "OrganisationCentreWiseBuilding.GetOrganisationCentreWiseBuildingByCentreCode()" };
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "OrganisationCentrewiseBuildingMaster.GetOrganisationCentrewiseBuildingMasterByCentreCode()" };
 }
 <!-- Page Content-->
 <div class="page-content">
@@ -13,22 +14,15 @@
                 <div class="page-title-box">
                     <div class="row">
                         <div class="col">
-                            <h4 class="page-title">@AdminResources.LabelOrganisationList</h4>
+                            <h4 class="page-title">@AdminResources.LabelOrganisationCentrewiseBuildingList</h4>
+                            <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add OrganisationCentrewiseBuilding</a>
                             @* <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Dastone</a></li>
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Tables</a></li>
                             <li class="breadcrumb-item active">Datatables</li>
                             </ol>*@
                         </div><!--end col-->
-                        <div class="col-md-1">
-                            <label>@AdminResources.LabelCentre</label>
-                        </div>
-                        <div class="col-md-3">
-                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                        </div>
-                        <div class="col-auto align-self-center">
-                            <a class=" btn btn-sm btn-soft-primary" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Centre</a>
-                        </div><!--end col-->
+                        <!--end col-->
                     </div><!--end row-->
                 </div><!--end page-title-box-->
             </div><!--end col-->
@@ -37,10 +31,19 @@
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    @* <div class="card-header">
-                    <h4 class="card-title">Country List</h4>
-                    <p class="text-muted mb-0"></p>
-                    </div><!--end card-header-->*@
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-1">
+                                <label>@AdminResources.LabelCentre</label>
+                            </div>
+                            <div class="col-md-3">
+                                @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                            </div>
+                            <div class="col-md-1">
+                                <input type="button" class="btn btn-success" value="Show" id="ShowDataId" onclick="OrganisationCentrewiseBuildingMaster.GetOrganisationCentrewiseBuildingMasterByCentreCode()" />
+                            </div>
+                        </div>
+                    </div><!--end card-header-->
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
                             @Html.Partial("~/Views/Organisation/OrganisationCentrewiseBuilding/_List.cshtml", Model)
