Added Field and Change Field Size

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/_List.cshtml
@@ -19,10 +19,12 @@
                     {
                         <tr>
                             <td>@item.FirstName</td>
+                            <td>@item.MiddleName</td>
                             <td>@item.LastName</td>
                             <td>@item.EmailId</td>
                             <td>@item.GenderEnumId</td>
                             <td>@item.MobileNumber</td>
+                            <td>@item.PhoneNumber</td>
                             <td>@item.LeadGenerationSource</td>
                             <td>@item.LeadGenerationStatus</td>
                             <td>
