--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -30,42 +30,49 @@
                         {
                             @Html.HiddenFor(m => m.GeneralLeadGenerationMasterId)
                             <div class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Title, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Title)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.FirstName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.FirstName)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.MiddleName, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.MiddleName)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.LastName)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control", @id = "DateOfBirth" })
                                         @Html.ValidationMessageFor(x => x.DateOfBirth, null, new { id = "errorDateOfBirth" })
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailId, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.EmailId, new { @class = "form-control", type = "email" })
                                         @Html.ValidationMessageFor(x => x.EmailId)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GenderEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
@@ -76,14 +83,21 @@
                                })   @Html.ValidationMessageFor(x => x.GenderEnumId)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", type = "tel" })
                                         @Html.ValidationMessageFor(x => x.MobileNumber)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PhoneNumber, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control", type = "tel" })
+                                        @Html.ValidationMessageFor(x => x.PhoneNumber)
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LeadGenerationSourceEnumId, new { @class = "form-label" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
@@ -95,7 +109,7 @@
                                         @Html.ValidationMessageFor(x => x.LeadGenerationSourceEnumId)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.LeadGenerationStatusEnumId, new { @class = "form-label" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
@@ -109,7 +123,7 @@
                                 </div>
                                 @if (Model.GeneralLeadGenerationMasterId > 0)
                                 {
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-3">
                                         <div class="mb-3">
                                             @Html.LabelFor(x => x.IsConverted, new { @class = "form-label" })
                                             <div class="form-check">
