--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/List.cshtml
@@ -13,7 +13,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">@AdminResources.LabelEmployeeList</span>
+                        <div class="row">
+                            <span class="card-title">@AdminResources.LabelEmployeeList</span>
+                        </div>
+                    </div>
+                    <div class="card-header">
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateEmployee" role="button"><i class="fas fa-plus me-2"></i>Add Employee</a>
                         <p class="text-muted mb-0"></p>
                         <div class="row">
@@ -40,7 +44,7 @@
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
 </div>
