--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -40,14 +40,14 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MaxCost, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MaxCost, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.MaxCost, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.MaxCost)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MinCost, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MinCost, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.MinCost, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.MinCost)
                                     </div>
                                 </div>
@@ -58,43 +58,46 @@
                                {
                                    DropdownSelectedValue = Model.PlanTypeEnumId.ToString(),
                                    DropdownName = "PlanTypeEnumId",
-                                   GroupCode = DropdownTypeEnum.GymPlanType.ToString()
+                                   GroupCode = DropdownTypeEnum.GymPlanType.ToString(),
+                                   AddSelectItem = false,
+                                   ChangeEvent = "GymMembershipPlan.ChangePlanType()"
                                })
                                         @Html.ValidationMessageFor(x => x.PlanTypeEnumId, null, new { id = "errorPlanTypeEnumId" })
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-4" id="PlanDurationInMonthDivId">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanDurationInMonth, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PlanDurationInMonth, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.PlanDurationInMonth, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.PlanDurationInMonth)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-4" id="PlanDurationInDaysDivId">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanDurationInDays, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PlanDurationInDays, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.PlanDurationInDays, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.PlanDurationInDays)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-4" style="display:none" id="PlanDurationInSessionDivId">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PlanDurationInSession, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PlanDurationInSession, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.PlanDurationInSession, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.PlanDurationInSession)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                             @*    <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsRenewable, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.IsRenewable, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.IsRenewable)
+                                        @Html.LabelFor(x => x.IsRenewable, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsRenewable, new { @class = "form-check-input" })
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-4">
+                                </div> *@
+                               @*  <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-control" })
+                                        @Html.CheckBoxFor(x => x.IsTimebaseBiometricAccess, new { @class = "form-check-input", @onclick = "" })
                                         @Html.ValidationMessageFor(x => x.IsTimebaseBiometricAccess)
                                     </div>
                                 </div>
@@ -111,7 +114,7 @@
                                         @Html.TextBoxFor(x => x.ToTime, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.ToTime)
                                     </div>
-                                </div>
+                                </div> *@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
@@ -130,3 +133,4 @@
         </div>
     </div>
 </div>
+<script src="~/js/coditech/gym/gymmembershipplan.js"></script>
