--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/CreateEdit.cshtml
@@ -1,8 +1,9 @@
 ﻿@model OrganisationCentrewiseBuildingRoomsViewModel
 @{
-    ViewBag.Title = Model.OrganisationCentrewiseBuildingRoomId > 0 ? "Update Organisation Centrewise Building Rooms" : "Add Organisation Centrewise Building Rooms";
+    ViewBag.Title = Model.OrganisationCentrewiseBuildingRoomId > 0 ? "Update Building" : "Add Building ";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetOrganisationCentrewiseBuildingRoomsByCentreCode()" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -15,11 +16,11 @@
                             <div class="col">
                                 @if (Model.OrganisationCentrewiseBuildingRoomId > 0)
                                 {
-                                    <h4 class="card-title">Update Organisation Centrewise Building Rooms</h4>
+                                    <h4 class="card-title">Update Building </h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Organisation Centrewise Building Rooms</h4>
+                                    <h4 class="card-title">Create Building </h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -31,41 +32,42 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.RoomName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.RoomName, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.RoomName)
+                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                                        @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationCentrewiseBuildingMasterId, new { @class = "form-label" })
-                                      @*   @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                    {
-                                    DropdownType = DropdownTypeEnum.FinancialYear.ToString(),
-                                    DropdownName = "GeneralFinancialYearId",
-                                    DropdownSelectedValue = Model.GeneralFinancialYearId.ToString()
-                                    }) *@
+                                        @Html.LabelFor(x => x.OrganisationCentrewiseBuildingMasterId, new { @class = "form-label required " })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownType = DropdownTypeEnum.CentrewiseBuilding.ToString(),
+                                   DropdownName = "OrganisationCentrewiseBuildingMasterId",
+                                   DropdownSelectedValue = Model.OrganisationCentrewiseBuildingMasterId.ToString()
+                               })
                                         @Html.ValidationMessageFor(x => x.OrganisationCentrewiseBuildingMasterId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.BuildFloorEnumId, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.BuildFloorEnumId, new { @class = "form-control" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.BuildFloorEnumId.ToString(),
+                                   DropdownName = "BuildFloorEnumId",
+                                   GroupCode = DropdownTypeEnum.Floors.ToString()
+                               })
                                         @Html.ValidationMessageFor(x => x.BuildFloorEnumId)
                                     </div>
                                 </div>
-                                @* <div class="col-lg-4">
+                                <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.KeyFieldEnumId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                    {
-                                    DropdownSelectedValue = Model.KeyFieldEnumId.ToString(),
-                                    DropdownName = "KeyFieldEnumId",
-                                    GroupCode = DropdownTypeEnum.GeneralRunningNumberFor.ToString()
-                                    })   @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
+                                        @Html.LabelFor(x => x.RoomName, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.RoomName, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.RoomName)
                                     </div>
-                                </div> *@
+                                </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Area, new { @class = "form-label required" })
