--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -136,6 +136,7 @@
     <script src="~/js/coditech/GeneralRunningNumbers.js"></script>
     <script src="~/js/coditech/EmployeeMaster.js"></script>
     <script src="~/js/coditech/OrganisationCentreWiseBuildingMaster.js"></script>
+    <script src="~/js/coditech/OrganisationCentrewiseBuildingRooms.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
