--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPersonAddress.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPersonAddress.cshtml
@@ -1,8 +1,10 @@
 ﻿@model GeneralPersonAddressViewModel
 @{
     Layout = null;
+    DropdownViewModel countryDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Country.ToString(), DropdownName = "GeneralCountryMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralCountryMasterId), ChangeEvent = "CoditechCommon.GetRegionListByCountryId()" };
+    DropdownViewModel regionDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Region.ToString(), DropdownName = "GeneralRegionMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralRegionMasterId), Parameter = Convert.ToString(Model.GeneralCountryMasterId), ChangeEvent = "CoditechCommon.GetCityListByRegionId()" };
+    DropdownViewModel cityDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.City.ToString(), DropdownName = "GeneralCityMasterId", DropdownSelectedValue = Convert.ToString(Model.GeneralCityMasterId), Parameter = Convert.ToString(Model.GeneralRegionMasterId) };
 }
-
 @using (Html.BeginForm("CreateEditGeneralPersonalAddress", "User", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
@@ -18,11 +20,89 @@
         </div>
         <div class="col-lg-4">
             <div class="mb-3">
+                @Html.LabelFor(x => x.MiddleName, new { @class = "form-label" })
+                @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
                 @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
                 @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.LastName)
             </div>
         </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.EmailAddress, new { @class = "form-label" })
+                @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.EmailAddress)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.PhoneNumber, new { @class = "form-label"})
+                @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.PhoneNumber)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label"})
+                @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.MobileNumber)
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.GeneralCountryMasterId, new { @class = "form-label required" })
+                @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", countryDropdown)
+                @Html.ValidationMessageFor(x => x.GeneralCountryMasterId)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.GeneralRegionMasterId, new { @class = "form-label required" })
+                @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", regionDropdown)
+                @Html.ValidationMessageFor(x => x.GeneralRegionMasterId)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.GeneralCityMasterId, new { @class = "form-label required" })
+                @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", cityDropdown)
+                @Html.ValidationMessageFor(x => x.GeneralCityMasterId)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.Postalcode, new { @class = "form-label required" })
+                @Html.TextBoxFor(x => x.Postalcode, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.Postalcode)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.AddressLine1, new { @class = "form-label required" })
+                @Html.TextAreaFor(x => x.AddressLine1, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.AddressLine1)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.AddressLine2, new { @class = "form-label"})
+                @Html.TextAreaFor(x => x.AddressLine2, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.AddressLine2)
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="mb-3">
+                @Html.LabelFor(x => x.CompanyName, new { @class = "form-label"})
+                @Html.TextBoxFor(x => x.CompanyName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.CompanyName)
+            </div>
+        </div>
     </div>
+
     <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
 }
