--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/_List.cshtml
@@ -24,8 +24,8 @@
                             <td>@item.Grade</td>
                             <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?designationId=@item.EmployeeDesignationMasterId" title="Update"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?designationIds=@item.EmployeeDesignationMasterId" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?designationId=@item.EmployeeDesignationMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?designationIds=@item.EmployeeDesignationMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
