--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCityMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCityMaster/_List.cshtml
@@ -22,8 +22,8 @@
                             <td>@item.RegionName</td>
                             <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?cityId=@item.GeneralCityMasterId" title="Update"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?cityIds=@item.GeneralCityMasterId" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?cityId=@item.GeneralCityMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?cityIds=@item.GeneralCityMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
