--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/List.cshtml
@@ -2,6 +2,38 @@
 @{
     ViewBag.Title = "Country List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
+}
+<!-- Page Content-->
+<div class="page-content mt-5">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <span class="card-title">@AdminResources.LabelCountryList</span>
+                        </div>
+                    </div>
+                    <div class="card-header">
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Country</a>
+                        <p class="text-muted mb-0"></p>
+                    </div>
+                    <div class="card-body">
+                        <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
+                            @Html.Partial("~/Views/GeneralMaster/GeneralCountryMaster/_List.cshtml", Model)
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end page content -->
+@* @model GeneralCountryListViewModel
+@{
+    ViewBag.Title = "Country List";
+    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -20,8 +52,8 @@
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
 </div>
-<!-- end page content -->
+<!-- end page content --> *@
