--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralOccupationMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralOccupationMaster/List.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Occupation List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -10,7 +11,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">@AdminResources.LabelOccupationList</span>
+                        <div class="row">
+                            <span class="card-title">@AdminResources.LabelOccupationList</span>
+                        </div>
+                    </div>
+                    <div class="card-header">
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Occupation</a>
                         <p class="text-muted mb-0"></p>
                     </div>
@@ -20,7 +25,7 @@
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
 </div>
