--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/_List.cshtml
@@ -25,8 +25,8 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?generalRegionId=@item.GeneralRegionMasterId" title="Update"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?regionIds=@item.GeneralRegionMasterId" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?generalRegionId=@item.GeneralRegionMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?regionIds=@item.GeneralRegionMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
