--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/List.cshtml
@@ -2,46 +2,31 @@
 @{
     ViewBag.Title = "Globle Setting List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <!-- Page Content-->
-<div class="page-content">
+<div class="page-content mt-5">
     <div class="container-fluid">
-        <!-- Page-Title -->
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="page-title-box">
-                    <div class="row">
-                        <div class="col">
-                            <h4 class="page-title">@AdminResources.LabelGlobleSettingList</h4>
-                            @* <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="javascript:void(0);">Dastone</a></li>
-                            <li class="breadcrumb-item"><a href="javascript:void(0);">Tables</a></li>
-                            <li class="breadcrumb-item active">Datatables</li>
-                            </ol>*@
-                        </div><!--end col-->
-                        <div class="col-auto align-self-center">
-                            <a class=" btn btn-sm btn-soft-primary" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Globle</a>
-                        </div><!--end col-->
-                    </div><!--end row-->
-                </div><!--end page-title-box-->
-            </div><!--end col-->
-        </div><!--end row-->
-        <!-- end page title end breadcrumb -->
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    @* <div class="card-header">
-                    <h4 class="card-title">Globle Setting List</h4>
-                    <p class="text-muted mb-0"></p>
-                    </div><!--end card-header-->*@
+                    <div class="card-header">
+                        <div class="row">
+                            <span class="card-title">@AdminResources.LabelGlobleSettingList</span>
+                        </div>
+                    </div>
+                    <div class="card-header">
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Globle</a>
+                        <p class="text-muted mb-0"></p>
+                    </div>
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
                             @Html.Partial("~/Views/GeneralMaster/GeneralSystemGlobleSettingMaster/_List.cshtml", Model)
                         </div>
                     </div>
                 </div>
-            </div> <!-- end col -->
-        </div> <!-- end row -->
-    </div><!-- container -->
+            </div>
+        </div>
+    </div>
 </div>
 <!-- end page content -->
