--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/List.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Gym Membership Plan List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -10,7 +11,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Gym Membership Plan List</span>
+                        <div class="row">
+                            <span class="card-title">@AdminResources.LabelGymBodyMeasurementTypeList</span>
+                        </div>
+                    </div>
+                    <div class="card-header">
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateGymMembershipPlan" role="button"><i class="fas fa-plus me-2"></i>Add Membership Plan</a>
                         <p class="text-muted mb-0"></p>
                     </div>
@@ -21,7 +26,7 @@
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
     </div>
 </div>
 <!-- end page content -->
